updated text column spacing and formatting on home page (issue #9, partial)

--- a/css/src/ccij.css
+++ b/css/src/ccij.css
@@ -26,7 +26,7 @@ a {
 }
 
 .entry-point {
-	text-align: justify;
+
 }
 
 .entry-point-img {
